# kv.nails

./: Cargo.toml  README.md
src/: main.rs
src/application/: mod.rs
src/application/shared/: errors.rs  mod.rs  unit_of_work_factory.rs
src/application/use_cases/: mod.rs
src/application/use_cases/create_appointment/: command.rs  errors.rs  mod.rs  use_case.rs
src/application/use_cases/create_master/: command.rs  errors.rs  mod.rs  use_case.rs
src/application/use_cases/register_user/: command.rs  errors.rs  mod.rs  use_case.rs
src/bootstrap/: mod.rs  pool.rs  provider.rs  unit_of_work_factory.rs  use_cases.rs
src/domain/: mod.rs  unit_of_work.rs
src/domain/appointment/: entity.rs  mod.rs  repository.rs  service.rs
src/domain/appointment/value_objects/: id.rs  mod.rs
src/domain/master/: entity.rs  repository.rs
src/domain/master/value_objects/: mod.rs
src/domain/models/appointment/: entity.rs  errors.rs  mod.rs  repository.rs
src/domain/models/master/: errors.rs  mod.rs  repository.rs
src/domain/models/profile/: errors.rs  mod.rs  repository.rs
src/domain/models/user/: errors.rs  mod.rs  (+1 more)
src/domain/profile/: entity.rs  repository.rs
src/domain/shared/: errors.rs  mod.rs  repository_provider.rs  tx_context.rs  unit_of_work.rs
src/domain/user/: entity.rs  mod.rs  repository.rs
src/infrastructure/mysql/: mod.rs  pool.rs  unit_of_work.rs
src/presentation/: mod.rs  state.rs
src/presentation/handlers/: health.rs  mod.rs  register_appointment.rs  register_user.rs
src/presentation/web/: errors.rs  mod.rs  router.rs  server.rs  state.rs
(+56 files in other folders)
