[package]
name = "kvnails-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = [
    "serde"
] }
uuid = { version = "1.23.2", features = [
    "v7",
    "serde",
    "fast-rng"
] }
serde = { version = "1.0.172-alpha.0", features = [
    "derive"
] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "uuid",
    "chrono",
    "macros"
] }
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = [
    "full"
] }
axum = "0.8.9"
