[package]
name = "kvnails-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
uuid = { version = "1.23", features = ["v7", "serde", "fast-rng"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "uuid", "chrono", "macros"] }
async-trait = "0.1"
serde_json = "1.0"
axum = "0.8"
